MolotovItemEntity code cleanup